@@ -9,6 +9,7 @@ import mcjty.lostcities.worldgen.lost.regassets.WorldStyleRE;
 import mcjty.lostcities.worldgen.lost.regassets.data.CityBiomeMultiplier;
 import mcjty.lostcities.worldgen.lost.regassets.data.CityStyleSelector;
 import mcjty.lostcities.worldgen.lost.regassets.data.DataTools;
+import mcjty.lostcities.worldgen.lost.regassets.data.ScatteredReference;
 import net.minecraft.core.Holder;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.biome.Biome;
@@ -26,6 +27,7 @@ public class WorldStyle implements ILostCityAsset {
 
     private final List<Pair<Predicate<Holder<Biome>>, Pair<Float, String>>> cityStyleSelector = new ArrayList<>();
     private final List<Pair<Predicate<Holder<Biome>>, Float>> cityBiomeMultiplier = new ArrayList<>();
+    private final List<ScatteredReference> scatteredReferences = new ArrayList<>();
 
     public WorldStyle(WorldStyleRE object) {
         name = object.getRegistryName();
@@ -40,6 +42,11 @@ public class WorldStyle implements ILostCityAsset {
         if (object.getCityBiomeMultipliers() != null) {
             for (CityBiomeMultiplier multiplier : object.getCityBiomeMultipliers()) {
                 cityBiomeMultiplier.add(Pair.of(multiplier.biomeMatcher(), multiplier.multiplier()));
+            }
+        }
+        if (object.getScatteredReferences() != null) {
+            for (ScatteredReference reference : object.getScatteredReferences()) {
+                scatteredReferences.add(reference);
             }
         }
     }
@@ -83,5 +90,9 @@ public class WorldStyle implements ILostCityAsset {
         } else {
             return randomFromList.getRight();
         }
+    }
+
+    public List<ScatteredReference> getScatteredReferences() {
+        return scatteredReferences;
     }
 }
