@@ -1,0 +1,60 @@
+{
+  "xsize": 16,
+  "zsize": 16,
+  "slices": [
+    [
+      "                ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      " ############## ",
+      "                "
+    ],
+    [
+      "                ",
+      "                ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "  ############  ",
+      "                ",
+      "                "
+    ],
+    [
+      "                ",
+      "                ",
+      "                ",
+      "   ##########   ",
+      "   ##########   ",
+      "   ##########   ",
+      "   ##########   ",
+      "   ##########   ",
+      "   ##########   ",
+      "   ##########   ",
+      "   ##########   ",
+      "   ##########   ",
+      "   ##########   ",
+      "                ",
+      "                ",
+      "                "
+    ]
+  ]
+}
