@@ -1,0 +1,3 @@
+{
+  "buildings": [ "radiotower" ]
+}
